--- a/references.bib
+++ b/references.bib
@@ -38,6 +38,43 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Allison et al_2019_A Comprehensive Framework to Evaluate Websites.pdf}
 }
 
+@article{altmanHistoryEvolutionGuidelines2016a,
+  title = {A History of the Evolution of Guidelines for Reporting Medical Research: The Long Road to the {{EQUATOR Network}}},
+  shorttitle = {A History of the Evolution of Guidelines for Reporting Medical Research},
+  author = {Altman, Douglas G and Simera, Iveta},
+  year = {2016},
+  month = feb,
+  journal = {Journal of the Royal Society of Medicine},
+  volume = {109},
+  number = {2},
+  pages = {67--77},
+  issn = {0141-0768},
+  doi = {10.1177/0141076815625599},
+  urldate = {2023-08-15},
+  pmcid = {PMC4793768},
+  pmid = {26880653},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Altman_Simera_2016_A history of the evolution of guidelines for reporting medical research.pdf}
+}
+
+@article{altmanReportingRecommendationsTumor2012,
+  title = {Reporting {{Recommendations}} for {{Tumor Marker Prognostic Studies}} ({{REMARK}}): Explanation and Elaboration},
+  shorttitle = {Reporting {{Recommendations}} for {{Tumor Marker Prognostic Studies}} ({{REMARK}})},
+  author = {Altman, Douglas G. and McShane, Lisa M. and Sauerbrei, Willi and Taube, Sheila E.},
+  year = {2012},
+  journal = {PLoS medicine},
+  volume = {9},
+  number = {5},
+  pages = {e1001216},
+  issn = {1549-1676},
+  doi = {10.1371/journal.pmed.1001216},
+  abstract = {The REMARK (Reporting Recommendations for Tumor Marker Prognostic Studies) guideline includes a checklist which aims to improve the reporting of these types of studies. Here, we expand on the REMARK checklist to enhance its use and effectiveness through better understanding of the intent of each item and why the information is important to report. Each checklist item of the REMARK guideline is explained in detail and accompanied by published examples of good reporting. The paper provides a comprehensive overview to educate on good reporting and provide a valuable reference of issues to consider when designing, conducting, and analyzing tumor marker studies and prognostic studies in medicine in general.},
+  langid = {english},
+  pmcid = {PMC3362085},
+  pmid = {22675273},
+  keywords = {{Biomarkers, Tumor},Biomedical Research,Checklist,Guidelines as Topic,Humans,Neoplasms,Prognosis,Publishing,Research Design,Research Report},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Altman et al_2012_Reporting Recommendations for Tumor Marker Prognostic Studies (REMARK).pdf}
+}
+
 @misc{alvesGlobalIndexMedicus,
   title = {Global {{Index Medicus}} \textendash{} {{World Health Organization}}},
   author = {Alves, BIREME / OPAS / OMS-M{\'a}rcio},
@@ -166,6 +203,25 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Band et al_2017_Intervention planning for a digital intervention for self-management of2.pdf}
 }
 
+@article{bastuji-garinImpactSTROBEStatement2013,
+  title = {Impact of {{STROBE}} Statement Publication on Quality of Observational Study Reporting: Interrupted Time Series versus before-after Analysis},
+  shorttitle = {Impact of {{STROBE}} Statement Publication on Quality of Observational Study Reporting},
+  author = {{Bastuji-Garin}, Sylvie and Sbidian, Emilie and {Gaudy-Marqueste}, Caroline and Ferrat, Emilie and Roujeau, Jean-Claude and Richard, Marie-Aleth and {Canoui-Poitrine}, Florence and {European Dermatology Network (EDEN)}},
+  year = {2013},
+  journal = {PloS One},
+  volume = {8},
+  number = {8},
+  pages = {e64733},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0064733},
+  abstract = {BACKGROUND: In uncontrolled before-after studies, CONSORT was shown to improve the reporting of randomised trials. Before-after studies ignore underlying secular trends and may overestimate the impact of interventions. Our aim was to assess the impact of the 2007 STROBE statement publication on the quality of observational study reporting, using both uncontrolled before-after analyses and interrupted time series. METHODS: For this quasi-experimental study, original articles reporting cohort, case-control, and cross-sectional studies published between 2004 and 2010 in the four dermatological journals having the highest 5-year impact factors ({$\geq$} 4) were selected. We compared the proportions of STROBE items (STROBE score) adequately reported in each article during three periods, two pre STROBE period (2004-2005 and 2006-2007) and one post STROBE period (2008-2010). Segmented regression analysis of interrupted time series was also performed. RESULTS: Of the 456 included articles, 187 (41\%) reported cohort studies, 166 (36.4\%) cross-sectional studies, and 103 (22.6\%) case-control studies. The median STROBE score was 57\% (range, 18\%-98\%). Before-after analysis evidenced significant STROBE score increases between the two pre-STROBE periods and between the earliest pre-STROBE period and the post-STROBE period (median score2004-05 48\% versus median score2008-10 58\%, p{$<$}0.001) but not between the immediate pre-STROBE period and the post-STROBE period (median score2006-07 58\% versus median score2008-10 58\%, p{$\mkern1mu$}={$\mkern1mu$}0.42). In the pre STROBE period, the six-monthly mean STROBE score increased significantly, by 1.19\% per six-month period (absolute increase 95\%CI, 0.26\% to 2.11\%, p{$\mkern1mu$}={$\mkern1mu$}0.016). By segmented analysis, no significant changes in STROBE score trends occurred (-0.40\%; 95\%CI, -2.20 to 1.41; p{$\mkern1mu$}={$\mkern1mu$}0.64) in the post STROBE statement publication. INTERPRETATION: The quality of reports increased over time but was not affected by STROBE. Our findings raise concerns about the relevance of uncontrolled before-after analysis for estimating the impact of guidelines.},
+  langid = {english},
+  pmcid = {PMC3753332},
+  pmid = {23990867},
+  keywords = {Abstracting and Indexing,Bibliometrics,Case-Control Studies,Cohort Studies,Cross-Sectional Studies,Dermatology,Observational Studies as Topic,Publishing,Regression Analysis,Reproducibility of Results,Research Design,Time Factors},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Bastuji-Garin et al_2013_Impact of STROBE statement publication on quality of observational study.pdf}
+}
+
 @misc{biernerMarkdownPreviewMermaid2022,
   title = {Markdown {{Preview Mermaid Support}}},
   author = {Bierner, Matt},
@@ -174,6 +230,24 @@
   urldate = {2022-04-13},
   abstract = {Adds Mermaid diagram and flowchart support to VS Code's builtin markdown preview},
   copyright = {MIT}
+}
+
+@article{bossuytSTARDStatementReporting2003,
+  title = {The {{STARD}} Statement for Reporting Studies of Diagnostic Accuracy: Explanation and Elaboration},
+  shorttitle = {The {{STARD}} Statement for Reporting Studies of Diagnostic Accuracy},
+  author = {Bossuyt, Patrick M. and Reitsma, Johannes B. and Bruns, David E. and Gatsonis, Constantine A. and Glasziou, Paul P. and Irwig, Les M. and Moher, David and Rennie, Drummond and {de Vet}, Henrica C. W. and Lijmer, Jeroen G. and {Standards for Reporting of Diagnostic Accuracy}},
+  year = {2003},
+  month = jan,
+  journal = {Annals of Internal Medicine},
+  volume = {138},
+  number = {1},
+  pages = {W1-12},
+  issn = {1539-3704},
+  doi = {10.7326/0003-4819-138-1-200301070-00012-w1},
+  abstract = {The quality of reporting of studies of diagnostic accuracy is less than optimal. Complete and accurate reporting is necessary to enable readers to assess the potential for bias in the study and to evaluate the generalizability of the results. A group of scientists and editors has developed the STARD (Standards for Reporting of Diagnostic Accuracy) statement to improve the reporting the quality of reporting of studies of diagnostic accuracy. The statement consists of a checklist of 25 items and flow diagram that authors can use to ensure that all relevant information is present. This explanatory document aims to facilitate the use, understanding, and dissemination of the checklist. The document contains a clarification of the meaning, rationale, and optimal use of each item on the checklist, as well as a short summary of the available evidence on bias and applicability. The STARD statement, checklist, flowchart, and this explanation and elaboration document should be useful resources to improve reporting of diagnostic accuracy studies. Complete and informative reporting can only lead to better decisions in health care.},
+  langid = {english},
+  pmid = {12513067},
+  keywords = {Algorithms,Bias,Clinical Trials as Topic,Diagnostic Techniques and Procedures,Publishing,Reference Standards,Reproducibility of Results,Research Design,Sensitivity and Specificity,Statistics as Topic}
 }
 
 @article{bradshawEmployingQualitativeDescription2017,
@@ -233,6 +307,21 @@
   langid = {english},
   keywords = {\_tablet,*medical research,*practice guideline,*Review Literature as Topic,*systematic review (topic),article,Behavioral and social aspects of health,Computer software,Global health,Guidelines as Topic,human,medical literature,Metaanalysis,publication,QES-include,quality control,Research design,Research reporting guidelines,standardization,study design,Surveys,Systematic reviews},
   file = {/Users/james/Zotero/storage/HDM9SWTR/Burford et al. - 2013 - Testing the PRISMA-Equity 2012 Reporting Guideline.pdf;/Users/james/Zotero/storage/LG4FPHH5/Burford et al_2013_Testing the PRISMA-Equity 2012 reporting guideline.pdf;/Users/james/Zotero/storage/FUH8VRUS/1380016.html;/Users/james/Zotero/storage/VGAFSVAI/1380016.html}
+}
+
+@article{CallCommentsProposal1994,
+  title = {Call for Comments on a Proposal to Improve Reporting of Clinical Trials in the Biomedical Literature. {{Working Group}} on {{Recommendations}} for {{Reporting}} of {{Clinical Trials}} in the {{Biomedical Literature}}},
+  year = {1994},
+  month = dec,
+  journal = {Annals of Internal Medicine},
+  volume = {121},
+  number = {11},
+  pages = {894--895},
+  issn = {0003-4819},
+  doi = {10.7326/0003-4819-121-11-199412010-00015},
+  langid = {english},
+  pmid = {7978706},
+  keywords = {Clinical Trials as Topic,Humans,Publishing}
 }
 
 @article{caneValidationTheoreticalDomains2012,
@@ -322,6 +411,44 @@
   pmid = {26089206},
   keywords = {\_tablet,Health Services Research,Healthcare quality improvement,Humans,Interviews as Topic,Periodicals as Topic,Publishing,Qualitative research,Qualitative Research,Quality improvement,Quality Improvement,Quality of Health Care,Writing},
   file = {/Users/james/Zotero/storage/BHVV3ZHJ/Davies et al. - 2015 - The SQUIRE Guidelines an evaluation from the fiel.pdf;/Users/james/Zotero/storage/G68XATQ5/Davies et al_2015_The SQUIRE Guidelines.pdf}
+}
+
+@article{dechartresEvolutionPoorReporting2017a,
+  title = {Evolution of Poor Reporting and Inadequate Methods over Time in 20 920 Randomised Controlled Trials Included in {{Cochrane}} Reviews: Research on Research Study},
+  shorttitle = {Evolution of Poor Reporting and Inadequate Methods over Time in 20 920 Randomised Controlled Trials Included in {{Cochrane}} Reviews},
+  author = {Dechartres, Agnes and Trinquart, Ludovic and Atal, Ignacio and Moher, David and Dickersin, Kay and Boutron, Isabelle and Perrodeau, Elodie and Altman, Douglas G. and Ravaud, Philippe},
+  year = {2017},
+  month = jun,
+  journal = {BMJ},
+  volume = {357},
+  pages = {j2490},
+  publisher = {{British Medical Journal Publishing Group}},
+  issn = {0959-8138, 1756-1833},
+  doi = {10.1136/bmj.j2490},
+  urldate = {2023-08-16},
+  abstract = {Objective To examine how poor reporting and inadequate methods for key methodological features in randomised controlled trials (RCTs) have changed over the past three decades. Design Mapping of trials included in Cochrane reviews. Data sources Data from RCTs included in all Cochrane reviews published between March 2011 and September 2014 reporting an evaluation of the Cochrane risk of bias items: sequence generation, allocation concealment, blinding, and incomplete outcome data. Data extraction For each RCT, we extracted consensus on risk of bias made by the review authors and identified the primary reference to extract publication year and journal. We matched journal names with Journal Citation Reports to get 2014 impact factors. Main outcomes measures We considered the proportions of trials rated by review authors at unclear and high risk of bias as surrogates for poor reporting and inadequate methods, respectively. Results We analysed 20 920 RCTs (from 2001 reviews) published in 3136 journals. The proportion of trials with unclear risk of bias was 48.7\% for sequence generation and 57.5\% for allocation concealment; the proportion of those with high risk of bias was 4.0\% and 7.2\%, respectively. For blinding and incomplete outcome data, 30.6\% and 24.7\% of trials were at unclear risk and 33.1\% and 17.1\% were at high risk, respectively. Higher journal impact factor was associated with a lower proportion of trials at unclear or high risk of bias. The proportion of trials at unclear risk of bias decreased over time, especially for sequence generation, which fell from 69.1\% in 1986-1990 to 31.2\% in 2011-14 and for allocation concealment (70.1\% to 44.6\%). After excluding trials at unclear risk of bias, use of inadequate methods also decreased over time: from 14.8\% to 4.6\% for sequence generation and from 32.7\% to 11.6\% for allocation concealment. Conclusions Poor reporting and inadequate methods have decreased over time, especially for sequence generation and allocation concealment. But more could be done, especially in lower impact factor journals.},
+  chapter = {Research},
+  copyright = {Published by the BMJ Publishing Group Limited. For permission to use (where not already granted under a licence) please go to http://group.bmj.com/group/rights-licensing/permissions},
+  langid = {english},
+  pmid = {28596181},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Dechartres et al_2017_Evolution of poor reporting and inadequate methods over time in 20 920.pdf}
+}
+
+@article{dejongMetareviewDemonstratesImproved2021,
+  title = {A Meta-Review Demonstrates Improved Reporting Quality of Qualitative Reviews Following the Publication of {{COREQ-}} and {{ENTREQ-checklists}}, Regardless of Modest Uptake},
+  author = {{de Jong}, Y. and {van der Willik}, E. M. and Milders, J. and Voorend, C. G. N. and Morton, Rachael L. and Dekker, F. W. and Meuleman, Y. and {van Diepen}, M.},
+  year = {2021},
+  month = sep,
+  journal = {BMC Medical Research Methodology},
+  volume = {21},
+  number = {1},
+  pages = {184},
+  issn = {1471-2288},
+  doi = {10.1186/s12874-021-01363-1},
+  urldate = {2023-08-17},
+  abstract = {Reviews of qualitative studies allow for deeper understanding of concepts and findings beyond the single qualitative studies. Concerns on study reporting quality led to the publication of the COREQ-guidelines for qualitative studies~in 2007, followed by the ENTREQ-guidelines for qualitative reviews in 2012. The aim of this meta-review is to: 1) investigate the uptake of the COREQ- and ENTREQ- checklists in qualitative reviews; and 2) compare the~quality of reporting of the primary qualitative studies included~within these reviews prior- and post COREQ-publication.},
+  keywords = {Appraisal,COREQ,ENTREQ,Impact study,Meta-review,Methodology,Qualitative research,Systematic review,Uptake},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/de Jong et al_2021_A meta-review demonstrates improved reporting quality of qualitative reviews.pdf}
 }
 
 @article{devriesProtocolFormatPreparation2015,
@@ -566,11 +693,46 @@
   keywords = {Quality assessment tool,Randomized controlled clinical trial,Report specification,Researchers,Status,Traditional Chinese medicine}
 }
 
+@article{hairRandomisedControlledTrial2019,
+  title = {A Randomised Controlled Trial of an {{Intervention}} to {{Improve Compliance}} with the {{ARRIVE}} Guidelines ({{IICARus}})},
+  author = {Hair, Kaitlyn and Macleod, Malcolm R. and Sena, Emily S. and Sena, Emily S. and Hair, Kaitlyn and Macleod, Malcolm R. and Howells, David and Bath, Philip and Irvine, Cadi and MacCallum, Catriona and Morrison, Gavin and Clark, Alejandra and Alvino, Gina and Dohm, Michelle and Liao, Jing and Sena, Chris and Moreland, Rosie and Cramond, Fala and Currie, Gillian L. and Bahor, Zsanett and Grill, Paula and {Bannach-Brown}, Alexandra and Marcu, Daniel-Cosmin and Antar, Sarah and Blazek, Katrina and Konold, Timm and Dingwall, Monica and Hohendorf, Victoria and Hosh, Mona and Gerlei, Klara Zsofia and Wever, Kimberley Elaine and Jones, Victor and Quinn, Terence J. and Karp, Natasha A. and Freymann, Jennifer and Shek, Anthony and Gregorc, Teja and Rinaldi, Arianna and Jheeta, Privjyot and Nazzal, Ahmed and Henshall, David Ewart and Storey, Joanne and Baginskaite, Julija and {de Oliveira}, Cilene Lino and Laban, Kamil and Charbonney, Emmanuel and Lynn, Savannah A. and Cascella, Marco and Wheater, Emily and Baker, Daniel and Cheyne, Ryan and Christopher, Edward and Roncon, Paolo and {De-Souza}, Evandro Ara{\'u}jo and Warda, Mahmoud and Corke, Sarah and Ammar, Zeinab and O'Connor, Leigh and Devonshire, Ian M. and McCann, Sarah K. and Gray, Laura J. and {Tanriver-Ayder}, Ezgi and {on behalf of the IICARus Collaboration}},
+  year = {2019},
+  month = jun,
+  journal = {Research Integrity and Peer Review},
+  volume = {4},
+  number = {1},
+  pages = {12},
+  issn = {2058-8615},
+  doi = {10.1186/s41073-019-0069-3},
+  urldate = {2021-08-23},
+  abstract = {The ARRIVE (Animal Research: Reporting of In Vivo Experiments) guidelines are widely endorsed but compliance is limited. We sought to determine whether journal-requested completion of an ARRIVE checklist improves full compliance with the guidelines.},
+  keywords = {ARRIVE,Randomised controlled trial,Reporting guidelines},
+  file = {/Users/james/Zotero/storage/4VGU2XPZ/Hair et al_2019_A randomised controlled trial of an Intervention to Improve Compliance with the.pdf;/Users/james/Zotero/storage/J2QWLZPM/s41073-019-0069-3.html}
+}
+
 @misc{HealthMedicalArticles,
   title = {Health and {{Medical Articles Database}} - {{African Index Medicus}}},
   urldate = {2021-03-01},
   howpublished = {https://indexmedicus.afro.who.int/},
   file = {/Users/james/Zotero/storage/GN4PPF26/indexmedicus.afro.who.int.html}
+}
+
+@article{hopewellImpactWebbasedTool2016,
+  title = {Impact of a Web-Based Tool ({{WebCONSORT}}) to Improve the Reporting of Randomised Trials: Results of a Randomised Controlled Trial},
+  shorttitle = {Impact of a Web-Based Tool ({{WebCONSORT}}) to Improve the Reporting of Randomised Trials},
+  author = {Hopewell, Sally and Boutron, Isabelle and Altman, Douglas G. and Barbour, Ginny and Moher, David and Montori, Victor and Schriger, David and Cook, Jonathan and Gerry, Stephen and Omar, Omar and Dutton, Peter and Roberts, Corran and Frangou, Eleni and Clifton, Lei and Chiocchia, Virginia and Rombach, Ines and Wartolowska, Karolina and Ravaud, Philippe},
+  year = {2016},
+  month = nov,
+  journal = {BMC Medicine},
+  volume = {14},
+  number = {1},
+  pages = {199},
+  issn = {1741-7015},
+  doi = {10.1186/s12916-016-0736-x},
+  urldate = {2020-11-05},
+  abstract = {The CONSORT Statement is an evidence-informed guideline for reporting randomised controlled trials. A number of extensions have been developed that specify additional information to report for more complex trials. The aim of this study was to evaluate the impact of using a simple web-based tool (WebCONSORT, which incorporates a number of different CONSORT extensions) on the completeness of reporting of randomised trials published in biomedical publications.},
+  keywords = {\_tablet},
+  file = {/Users/james/Zotero/storage/CWBSXNFP/Hopewell et al_2016_Impact of a web-based tool (WebCONSORT) to improve the reporting of randomised.pdf;/Users/james/Zotero/storage/ZK3NGUZ5/s12916-016-0736-x.html}
 }
 
 @misc{IMSEARSEAROHome,
@@ -641,6 +803,20 @@
   file = {/Users/james/Zotero/storage/JPRE2NKY/Karadağ Öncel et al_2018_Knowledge and awareness of optimal use of reporting guidelines in paediatricians.pdf}
 }
 
+@article{kilicogluMethodologyReportingImproved2023,
+  title = {Methodology Reporting Improved over Time in 176,469 Randomized Controlled Trials},
+  author = {Kilicoglu, Halil and Jiang, Lan and Hoang, Linh and {Mayo-Wilson}, Evan and Vinkers, Christiaan H. and Otte, Willem M.},
+  year = {2023},
+  month = aug,
+  journal = {Journal of Clinical Epidemiology},
+  issn = {0895-4356},
+  doi = {10.1016/j.jclinepi.2023.08.004},
+  urldate = {2023-08-16},
+  abstract = {Objective To describe randomized controlled trial (RCT) methodology reporting over time. Study Design and Setting We used a deep learning-based sentence classification model based on the CONSORT Statement, considered minimum requirements for reporting RCTs. We included 176,469 RCT reports published between 1966 and 2018. We analyzed the reporting trends over 5-year time periods, grouping trials from 1966-1990 in a single stratum. We also explored the effect of journal impact factor (JIF) and medical discipline. Results Population, Intervention, Comparator, Outcome (PICO) items were commonly reported during each period, and reporting increased over time (e.g., Interventions: 79.1\% in 1966-1990 to 87.5\% in 2010-2018). Reporting of some methods information has increased, although there is room for improvement (e.g., Sequence Generation: 10.8\% to 41.8\%). Some items are reported infrequently (e.g., Allocation Concealment: 5.1\% to 19.3\%). The number of items reported and JIF are weakly correlated (Pearson's r(162,702)=0.16, p {$<$} .001). Differences in the proportion of items reported between disciplines are small ({$<$}10\%). Conclusion Our analysis provides large-scale quantitative support for the hypothesis that RCT methodology reporting has improved over time. Extending these models to all CONSORT items could facilitate compliance checking during manuscript authoring and peer review, and support meta-research.},
+  keywords = {CONSORT,machine learning,meta-research,randomized controlled trials,reporting guidelines,text mining},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Kilicoglu et al_2023_Methodology reporting improved over time in 176,469 randomized controlled trials.pdf}
+}
+
 @article{kimCharacteristicsQualitativeDescriptive2017,
   title = {Characteristics of {{Qualitative Descriptive Studies}}: {{A Systematic Review}}},
   shorttitle = {Characteristics of {{Qualitative Descriptive Studies}}},
@@ -697,6 +873,27 @@
   urldate = {2022-09-26},
   collaborator = {Lavrakas, Paul},
   isbn = {978-1-4129-1808-4 978-1-4129-6394-7}
+}
+
+@article{liberatiPRISMAStatementReporting2009,
+  title = {The {{PRISMA}} Statement for Reporting Systematic Reviews and Meta-Analyses of Studies That Evaluate Healthcare Interventions: Explanation and Elaboration},
+  shorttitle = {The {{PRISMA}} Statement for Reporting Systematic Reviews and Meta-Analyses of Studies That Evaluate Healthcare Interventions},
+  author = {Liberati, Alessandro and Altman, Douglas G. and Tetzlaff, Jennifer and Mulrow, Cynthia and G{\o}tzsche, Peter C. and Ioannidis, John P. A. and Clarke, Mike and Devereaux, P. J. and Kleijnen, Jos and Moher, David},
+  year = {2009},
+  month = jul,
+  journal = {BMJ},
+  volume = {339},
+  pages = {b2700},
+  publisher = {{British Medical Journal Publishing Group}},
+  issn = {0959-8138, 1468-5833},
+  doi = {10.1136/bmj.b2700},
+  urldate = {2023-08-16},
+  abstract = {Systematic reviews and meta-analyses are essential to summarise evidence relating to efficacy and safety of healthcare interventions accurately and reliably. The clarity and transparency of these reports, however, are not optimal. Poor reporting of systematic reviews diminishes their value to clinicians, policy makers, and other users. Since the development of the QUOROM (quality of reporting of meta-analysis) statement\textemdash a reporting guideline published in 1999\textemdash there have been several conceptual, methodological, and practical advances regarding the conduct and reporting of systematic reviews and meta-analyses. Also, reviews of published systematic reviews have found that key information about these studies is often poorly reported. Realising these issues, an international group that included experienced authors and methodologists developed PRISMA (preferred reporting items for systematic reviews and meta-analyses) as an evolution of the original QUOROM guideline for systematic reviews and meta-analyses of evaluations of health care interventions. The PRISMA statement consists of a 27-item checklist and a four-phase flow diagram. The checklist includes items deemed essential for transparent reporting of a systematic review. In this explanation and elaboration document, we explain the meaning and rationale for each checklist item. For each item, we include an example of good reporting and, where possible, references to relevant empirical studies and methodological literature. The PRISMA statement, this document, and the associated website (www.prisma-statement.org/) should be helpful resources to improve reporting of systematic reviews and meta-analyses.},
+  chapter = {Research Methods \&amp; Reporting},
+  copyright = {\textcopyright{} Liberati et al 2009. This is an open-access article distributed under the terms of the Creative Commons Attribution Non-commercial License, which permits unrestricted use, distribution, and reproduction in any medium, provided the original work is properly cited.},
+  langid = {english},
+  pmid = {19622552},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Liberati et al_2009_The PRISMA statement for reporting systematic reviews and meta-analyses of.pdf}
 }
 
 @misc{LILACS,
@@ -972,6 +1169,25 @@
   langid = {english}
 }
 
+@article{nedovicEvaluationEndorsementSTrengthening2016,
+  title = {Evaluation of the {{Endorsement}} of the {{STrengthening}} the {{REporting}} of {{Genetic Association Studies}} ({{STREGA}}) {{Statement}} on the {{Reporting Quality}} of {{Published Genetic Association Studies}}},
+  author = {Nedovic, Darko and Panic, Nikola and Pastorino, Roberta and Ricciardi, Walter and Boccia, Stefania},
+  year = {2016},
+  month = aug,
+  journal = {Journal of Epidemiology},
+  volume = {26},
+  number = {8},
+  pages = {399--404},
+  issn = {1349-9092},
+  doi = {10.2188/jea.JE20150173},
+  abstract = {The STrengthening the REporting of Genetic Association studies (STREGA) statement was based on the STrengthening the REporting of OBservational studies in Epidemiology (STROBE) statement, and it was published in 2009 in order to improve the reporting of genetic association (GA) studies. Our aim was to evaluate the impact of STREGA endorsement on the quality of reporting of GA studies published in journals in the field of genetics and heredity (GH). Quality of reporting was evaluated by assessing the adherence of papers to the STREGA checklist. After identifying the GH journals that endorsed STREGA in their instructions for authors, we randomly appraised papers published in 2013 from journals endorsing STREGA that published GA studies (Group A); in GH journals that never endorsed STREGA (Group B); in GH journals endorsing STREGA, but in the year preceding its endorsement (Group C); and in the same time period as Group C from GH journals that never endorsed STREGA (Group D). The STREGA statement was referenced in 29 (18.1\%) of 160 GH journals, of which 18 (62.1\%) journals published GA studies. Among the 18 journals endorsing STREGA, we found a significant increase in the overall adherence to the STREGA checklist over time (A vs C; P {$<$} 0.0001). Adherence to the STREGA checklist was significantly higher in journals endorsing STREGA compared to those that did not endorse the statement (A vs B; P = 0.04). No significant improvement was detected in the adherence to STREGA items in journals not endorsing STREGA over time (B vs D; P {$>$} 0.05). The endorsement of STREGA resulted in an increase in quality of reporting of GA studies over time, while no similar improvement was reported for journals that never endorsed STREGA.},
+  langid = {english},
+  pmcid = {PMC4967660},
+  pmid = {27349199},
+  keywords = {Genetic Association Studies,Humans,Periodicals as Topic,Publishing,Research Report},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Nedovic et al_2016_Evaluation of the Endorsement of the STrengthening the REporting of Genetic.pdf}
+}
+
 @misc{NICEClinicalGuidelines,
   title = {{{NICE}} Clinical Guidelines | {{Tools}} and Resources | {{The}} Guidelines Manual | {{Guidance}} | {{NICE}}},
   publisher = {{NICE}},
@@ -1073,6 +1289,22 @@
   langid = {english}
 }
 
+@article{pouwelsQualityReportingConfounding2016,
+  title = {Quality of Reporting of Confounding Remained Suboptimal after the~{{STROBE}} Guideline},
+  author = {Pouwels, Koen B. and Widyakusuma, Niken N. and Groenwold, Rolf H. H. and Hak, Eelko},
+  year = {2016},
+  month = jan,
+  journal = {Journal of Clinical Epidemiology},
+  volume = {69},
+  pages = {217--224},
+  issn = {0895-4356},
+  doi = {10.1016/j.jclinepi.2015.08.009},
+  urldate = {2023-08-17},
+  abstract = {Objectives Poor quality of reporting of confounding has been observed in observational studies prior the STrenghtening the Reporting of Observational studies in Epidemiology (STROBE) statement, a reporting guideline for observational studies. We assessed whether the reporting of confounding improved after the STROBE statement. Study Design and Setting We searched MEDLINE for all articles about observational cohort and case\textendash control studies on interventions with a hypothesized beneficial effect in five general medical and five epidemiologic journals published between January 2010 and December 2012. We abstracted data for the baseline period before the publication of the STROBE statement (January 2004\textendash April 2007) from a prior study. Six relevant items related to confounding were scored for each article. A comparison of the median number of items reported in both periods was made. Results In total, 174 articles published before and 220 articles published after the STROBE statement were included. The median number reported items was similar before and after the publication of the STROBE statement [median, 4; interquartile range [IQR], 3\textendash 5 vs. median, 4; IQR, 3.75\textendash 5]. However, the distribution of the number of reported items shifted somewhat to the right (P~=~0.01). Conclusion Although the quality of reporting of confounding improved in certain aspects, the overall quality remains suboptimal.},
+  keywords = {Confounding factors,Editorial policies,Epidemiology,Guideline adherence,Guidelines as topics,Publishing/standards},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Pouwels et al_2016_Quality of reporting of confounding remained suboptimal after the STROBE.pdf}
+}
+
 @article{pradyAssessingUtilityStandards2007,
   title = {Assessing the Utility of the Standards for Reporting Trials of Acupuncture ({{STRICTA}}): {{A}} Survey of Authors},
   shorttitle = {Assessing the {{Utility}} of the {{Standards}} for {{Reporting Trials}} of {{Acupuncture}} ({{STRICTA}})},
@@ -1117,6 +1349,20 @@
   howpublished = {http://miror-ejd.eu/},
   langid = {american},
   file = {/Users/james/Zotero/storage/GRZIZ7TL/miror-ejd.eu.html}
+}
+
+@article{ProposalStructuredReporting1994,
+  title = {A Proposal for Structured Reporting of Randomized Controlled Trials. {{The Standards}} of {{Reporting Trials Group}}},
+  year = {1994},
+  month = dec,
+  journal = {JAMA},
+  volume = {272},
+  number = {24},
+  pages = {1926--1931},
+  issn = {0098-7484},
+  langid = {english},
+  pmid = {7990245},
+  keywords = {Publishing,Quality Control,Randomized Controlled Trials as Topic}
 }
 
 @misc{QuartoOpenSource,
@@ -1212,6 +1458,43 @@
   langid = {english},
   pmid = {32987157},
   file = {/Users/james/Zotero/storage/SITA7HK4/Rosumeck et al_2020_A validation study revealed differences in design and performance of search.pdf;/Users/james/Zotero/storage/KGWATPGW/fulltext.html}
+}
+
+@article{santoMethodsResultsStudies2023,
+  title = {Methods and Results of Studies on Reporting Guideline Adherence Are Poorly Reported: A Meta-Research Study},
+  shorttitle = {Methods and Results of Studies on Reporting Guideline Adherence Are Poorly Reported},
+  author = {Santo, Tiffany Dal and Rice, Danielle B. and Amiri, Lara S. N. and Tasleem, Amina and Li, Kexin and Boruff, Jill T. and Geoffroy, Marie-Claude and Benedetti, Andrea and Thombs, Brett D.},
+  year = {2023},
+  month = jul,
+  journal = {Journal of Clinical Epidemiology},
+  volume = {159},
+  pages = {225--234},
+  publisher = {{Elsevier}},
+  issn = {0895-4356, 1878-5921},
+  doi = {10.1016/j.jclinepi.2023.05.017},
+  urldate = {2023-08-15},
+  langid = {english},
+  pmid = {37271424},
+  keywords = {Checklist,Checklists,Replicability,Reproducibility,Research waste,Research-on-research}
+}
+
+@article{santoMethodsResultsStudies2023a,
+  title = {Methods and Results of Studies on Reporting Guideline Adherence Are Poorly Reported: A Meta-Research Study},
+  shorttitle = {Methods and Results of Studies on Reporting Guideline Adherence Are Poorly Reported},
+  author = {Santo, Tiffany Dal and Rice, Danielle B. and Amiri, Lara S. N. and Tasleem, Amina and Li, Kexin and Boruff, Jill T. and Geoffroy, Marie-Claude and Benedetti, Andrea and Thombs, Brett D.},
+  year = {2023},
+  month = jul,
+  journal = {Journal of Clinical Epidemiology},
+  volume = {159},
+  pages = {225--234},
+  publisher = {{Elsevier}},
+  issn = {0895-4356, 1878-5921},
+  doi = {10.1016/j.jclinepi.2023.05.017},
+  urldate = {2023-08-17},
+  langid = {english},
+  pmid = {37271424},
+  keywords = {Checklist,Checklists,Replicability,Reproducibility,Research waste,Research-on-research},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Santo et al_2023_Methods and results of studies on reporting guideline adherence are poorly.pdf}
 }
 
 @misc{SciELO,
@@ -1431,6 +1714,26 @@
   title = {Usage {{Statistics}} and {{Market Share}} of {{Traffic Analysis Tools}} for {{Websites}}, {{July}} 2023},
   urldate = {2023-07-31},
   howpublished = {https://w3techs.com/technologies/overview/traffic\_analysis}
+}
+
+@article{vandenbrouckeStrengtheningReportingObservational2007a,
+  title = {Strengthening the {{Reporting}} of {{Observational Studies}} in {{Epidemiology}} ({{STROBE}}): Explanation and Elaboration},
+  shorttitle = {Strengthening the {{Reporting}} of {{Observational Studies}} in {{Epidemiology}} ({{STROBE}})},
+  author = {Vandenbroucke, Jan P. and {von Elm}, Erik and Altman, Douglas G. and G{\o}tzsche, Peter C. and Mulrow, Cynthia D. and Pocock, Stuart J. and Poole, Charles and Schlesselman, James J. and Egger, Matthias and {STROBE Initiative}},
+  year = {2007},
+  month = oct,
+  journal = {PLoS medicine},
+  volume = {4},
+  number = {10},
+  pages = {e297},
+  issn = {1549-1676},
+  doi = {10.1371/journal.pmed.0040297},
+  abstract = {Much medical research is observational. The reporting of observational studies is often of insufficient quality. Poor reporting hampers the assessment of the strengths and weaknesses of a study and the generalisability of its results. Taking into account empirical evidence and theoretical considerations, a group of methodologists, researchers, and editors developed the Strengthening the Reporting of Observational Studies in Epidemiology (STROBE) recommendations to improve the quality of reporting of observational studies. The STROBE Statement consists of a checklist of 22 items, which relate to the title, abstract, introduction, methods, results and discussion sections of articles. Eighteen items are common to cohort studies, case-control studies and cross-sectional studies and four are specific to each of the three study designs. The STROBE Statement provides guidance to authors about how to improve the reporting of observational studies and facilitates critical appraisal and interpretation of studies by reviewers, journal editors and readers. This explanatory and elaboration document is intended to enhance the use, understanding, and dissemination of the STROBE Statement. The meaning and rationale for each checklist item are presented. For each item, one or several published examples and, where possible, references to relevant empirical studies and methodological literature are provided. Examples of useful flow diagrams are also included. The STROBE Statement, this document, and the associated Web site (http://www.strobe-statement.org/) should be helpful resources to improve reporting of observational research.},
+  langid = {english},
+  pmcid = {PMC2020496},
+  pmid = {17941715},
+  keywords = {Case-Control Studies,Cohort Studies,Cross-Sectional Studies,Epidemiologic Research Design,Guidelines as Topic,Observation,Publishing},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Vandenbroucke et al_2007_Strengthening the Reporting of Observational Studies in Epidemiology (STROBE)2.pdf}
 }
 
 @misc{VIPChineseMedical,
